# armenian-lectionary

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  TYPOS.md  app.py  lectionary.py  lectionary_data.json  lectionary_generator_revised.py  pyproject.toml  requirements.txt  second_volume_cycles.json
.github/: CODEOWNERS
.github/workflows/: release.yml
armenian_lectionary/: __init__.py  cli.py  engine.py
armenian_lectionary/data/: book_names_hy.json  feast_names_hy.json  lectionary_data.json  saint_readings.json  saint_schedule.json
dev/: WINTER_HINGE_PROGRESS.md  analyze.py  build_continua.py  build_second_volume_cycles.py  build_table.py  bulk_fetch.py  certainty_audit.py  compare_app.py  composite_probe.py  continua_probe.py  continua_sequence.json  embedded_diag.py  estimate_report.py  feast_audit.py  feast_names.py  fetch_reference.py  fetch_translations.py  paschal_index.py  postnat_schedule.json  predictability_audit.py  residue_classifier.py  saint_schedule.json  saint_schedule.py  second_volume_coverage.py  second_volume_cycles.json  second_volume_index.py  second_volume_resolve.py  slot_model.py  source_corrections.py
docs/: README.md
docs/sources/: great_paschal_cycle_index.csv  great_paschal_cycle_index.md  great_paschal_cycle_index.numbers  second_volume_index.csv  second_volume_index.md  second_volume_index.numbers  second_volume_leap_rules.md  tonatsooyts-annunciation-canon.md  tonatsooyts-eastertide-gospels.md  tonatsooyts-fast-of-catechumens.md  tonatsooyts-fast-suppression.md  tonatsooyts-low-sunday-antasdan.md  tonatsooyts-nativity-octave.md  tonatsooyts-prelent-cohort.md  tonatsooyts-presentation-theotokos.md
reports/: blank_sourcing.md  certainty_2027.md  lectionary_disagreements.md  predictability_classification.md  residual_estimate_tail.md  unpredictable_days.md
tests/: _reference_cache.py  test_calendar.py  test_feast.py  test_full_dataset.py  test_language.py  test_parser.py  test_regression.py  test_table_build.py
